--- a/places.html
+++ b/places.html
@@ -23,7 +23,26 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <ul>
+        <li>
+          <img src="/images/places/barcelona.jpg" alt="City of Barcelona" />
+          <div class="item-content">
+            <div>
+              <h2>Barcelona</h2>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Praesentium voluptatum odit doloremque cupiditate beatae error
+                dolorem.
+              </p>
+            </div>
+            <div class="actions">
+              <a href="https://en.wikipedia.org/wiki/Barcelona">Explore</a>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </main>
     <footer>
       <ul>
         <li>
